syntax = "proto3";

package cart;

option go_package = "/cart";

import "api.proto";

service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp) {
    option (api.post) = "/cart/add_item";
  }
  rpc GetCart(GetCartReq) returns (GetCartResp) {
    option (api.get) = "/cart/get_cart";
  }
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {
    option (api.post) = "/cart/empty_cart";
  }
}

message CartItem {
  uint32 product_id = 1 [ (api.body) = "product_id" ];
  int32 quantity = 2 [ (api.body) = "quantity" ];
}

message AddItemReq {
  uint32 user_id = 1 [ (api.body) = "user_id" ];
  CartItem item = 2 [ (api.body) = "item" ];
}

message AddItemResp {}

message EmptyCartReq { uint32 user_id = 1 [ (api.body) = "user_id" ]; }

message GetCartReq { uint32 user_id = 1 [ (api.query) = "user_id" ]; }

message GetCartResp { Cart cart = 1; }

message Cart {
  uint32 user_id = 1;
  repeated CartItem items = 2;
}

message EmptyCartResp {}

